--- a/Doneness.html
+++ b/Doneness.html
@@ -6,7 +6,7 @@
 <body>
 
   <h1>A Guide to Doneness</h1>
-  <img src="https://i.redd.it/vjrzsefsxgh01.jpg" alt="Steak Cuts" width="420" height="300">
+  <img src="images/doneness.jpg" alt="Steak Cuts" width="420" height="300">
   <p>This steak parameter will great influence on your tasting experience as it is the part that literally comes in your mouth first before going to your belly.</p>
 
   <h2>1) Rare (120°F)</h2>
