--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+ <html>
+  <head>
+    <title>index</title>
+  </head>
+<body>
+  <h1>
+      Welcome to SatanicTaco's WebServers Repository!
+  </h1>
+  <p>
+      Please choose one of the following links:
+  </p>
+  <a href="./SteakCuts.html">Steak Cuts!</a>
+  <a href="./Doneness.html">Doneness!</a>
+</body>
+ </html>
