--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       Please choose one of the following links:
   </p>
   <a href="./SteakCuts.html">Steak Cuts!</a>
+
   <a href="./Doneness.html">Doneness!</a>
+
+  <a href="./construction.html">Others!</a>
 </body>
  </html>
