--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <p>
       Please choose one of the following links:
   </p>
-  <a href="./SteakCuts.html">Steak Cuts!</a>
+  <a href="htmls/SteakCuts.html">Steak Cuts!</a>
 
-  <a href="./Doneness.html">Doneness!</a>
+  <a href="htmls/Doneness.html">Doneness!</a>
 
-  <a href="./construction.html">Others!</a>
+  <a href="htmls/construction.html">Others!</a>
 </body>
  </html>
