--- a/htmls/SteakCuts.html
+++ b/htmls/SteakCuts.html
@@ -5,6 +5,8 @@
   </head>
 <body>
 
+  <h1 onclick="this.innerHTML='Sorry this was not an option!'">Click here first if you do not want to see meat!</h1>
+
   <h1>The Different Cuts of Steak</h1>
   <img src="../images/cuts.jpg" alt="Steak Cuts" width="420" height="300">
   <p>Choosing your cut of this delicious piece of meat will definitely affect the taste and texture of your steak. Here, you will find the three most common cut that are well known in the meathead community.</p>
