--- a/htmls/construction.html
+++ b/htmls/construction.html
@@ -10,6 +10,10 @@
   <p>
       This section is still under construction!
   </p>
-  <img src="../images/Website-Under-Construction.jpg" alt="Construction" width="420" height="300">
+  <button onclick="document.getElementById('myImage').src='../images/helped.jpg'">Click here to help me fix this site!</button>
+
+<img id="myImage" src="../images/Website-Under-Construction.jpg" style="width:500px">
+
+<button onclick="document.getElementById('myImage').src='../images/Website-Under-Construction.jpg'">Click here to stop helping me ;(</button>
 </body>
  </html>
