--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
   <a href="htmls/Doneness.html">Doneness!</a>
 
   <a href="htmls/construction.html">Others!</a>
+
+  <p>
+    Your time is:
+  </p>
+  <script>
+    document.write(Date());
+  </script>
 </body>
  </html>
